# shadai

./: .gitignore  CLAUDE.md  CLIENT_UPDATES.md  COMPATIBILITY_FIXES.md  LICENSE  MANIFEST.in  PACKAGE_OVERVIEW.md  QUICKSTART.md  README.md  example.py  pyproject.toml  readme.md  run_chat.sh  run_streamlit.sh  setup.py  streamlit_app.py  streamlit_chat_app.py
.github/workflows/: python-publish.yml
docs/: README.md  index.md
docs/advanced/: best-practices.md  custom-tools.md  performance-optimization.md  tool-orchestration.md
docs/api-reference/: agent-tool.md  engine-tool.md  exceptions.md  query-tool.md  shadai-client.md  summarize-tool.md  web-search-tool.md
docs/core-concepts/: architecture.md  intelligent-agent.md  rag-system.md  tools-overview.md
docs/examples/: advanced-patterns.md  basic-query.md  custom-agent.md  market-research.md  multi-document-analysis.md
docs/getting-started/: authentication.md  first-query.md  installation.md  quickstart.md
docs/guides/: error-handling.md  file-ingestion.md  memory-and-context.md  session-management.md  streaming-responses.md
docs/use-cases/: custom-workflows.md  document-qa.md  knowledge-synthesis.md  research-assistant.md
examples/: 01_ingest.py  02_query.py  03_summary.py  04_websearch.py  05_engine.py  06_agent.py  agent.py  call_llm.py  chat_with_data_and_history.py  chat_with_images.py  chat_with_llm.py  create_article.py  create_shadai_agent.py  create_smart_agent.py  engine.py  get_session_summary.py  handle_sessions.py  ingest.py  ingest_and_query.py  ingest_data.py  llm_call.py  make_multiple_queries.py  make_single_query.py  query.py  simple_agent.py  summary.py  summary_example.py  synthesis_agent.py  websearch.py  websearch_example.py
intelligence/core/: adapter.py  decorators.py  schemas.py  session.py
shadai/: __init__.py  __version__.py  client.py  error_handler.py  exceptions.py  models.py  session.py  timing.py  tools.py
shadai/core/: adapter.py  agents.py  decorators.py  enums.py  exceptions.py  files.py  manager.py  schemas.py  session.py
shadai/intelligence/core/: adapter.py  agents.py  decorators.py  exceptions.py  (+2 more)
