[project]
name = "shadai"
version = "0.1.28"
description = "SHADAI Client"
authors = [
    {name = "SHADAI GROUP", email = "jaisir@shadai.ai"}
]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "shadai",
    "ai",
    "rag",
    "machine-learning",
    "nlp",
    "knowledge-base",
    "mcp",
    "async",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "langchain-core==1.0.0a8",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shadai"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]